Updated forms responsive layout

--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
                       </div>
                       <p>Completează următoarele date întocmai ca în actul de identitate:</p>
                       <div class="row">
-                        <div class="col-xs-6">
+                        <div class="col-sm-6">
                           <div class="form-group required">
                             <label class="control-label" for="prenume-reprezentant">Prenume:</label>
                             <input type="text" class="form-control" id="prenume-reprezentant" name="prenume" placeholder="Andrei" required>
                           </div>
                         </div>
-                        <div class="col-xs-6">
+                        <div class="col-sm-6">
                           <div class="form-group required">
                             <label class="control-label" for="nume-reprezentant">Nume de familie:</label>
                             <input type="text" class="form-control" id="nume-reprezentant" name="nume" placeholder="Popescu" required>
@@ -156,13 +156,13 @@
                         <input type="text" class="form-control" id="cnp-reprezentant" name="cnp" placeholder="SAALLZZJJNNNC" required>
                       </div>
                       <div class="row">
-                        <div class="col-xs-4">
+                        <div class="col-sm-4">
                           <div class="form-group required">
                             <label class="control-label" for="serie-reprezentant">Serie act identitate:</label>
                             <input type="text" class="form-control" id="serie-reprezentant" name="serie" placeholder="XY" required>
                           </div>
                         </div>
-                        <div class="col-xs-8">
+                        <div class="col-sm-8">
                           <div class="form-group required">
                             <label class="control-label" for="numar-reprezentant">Număr act identitate:</label>
                             <input type="text" class="form-control" id="numar-reprezentant" name="numar" placeholder="123456" required>
@@ -174,7 +174,7 @@
                         <textarea class="form-control" id="adresa-reprezentant" name="adresa" rows="3" placeholder="Str. Carol Davila Nr. 91, Parter, Ap. 1, Sector 5, Bucureşti" required></textarea>
                       </div>
                       <div class="row">
-                        <div class="col-xs-6">
+                        <div class="col-sm-6">
                           <div class="form-group required">
                             <label class="control-label" for="regiune-reprezentant">Județul din actul de identitate:</label>
                             <select class="form-control" id="regiune-reprezentant" name="regiune" required>
@@ -230,7 +230,7 @@
                             </select>
                           </div>
                         </div>
-                        <div class="col-xs-6">
+                        <div class="col-sm-6">
                           <div class="form-group required">
                             <label class="control-label" for="tara-reprezentant">Țara:</label>
                             <select class="form-control" id="tara-reprezentant" name="tara" required>
@@ -539,13 +539,13 @@
                       <p><strong>Termen limită înscriere:</strong> <mark>2 decembrie</mark></p>
                       <p>Completează următoarele date întocmai ca în actul de identitate:</p>
                       <div class="row">
-                        <div class="col-xs-6">
+                        <div class="col-sm-6">
                           <div class="form-group required">
                             <label class="control-label" for="prenume-delegat">Prenume:</label>
                             <input type="text" class="form-control" id="prenume-delegat" name="prenume" placeholder="Andrei" required>
                           </div>
                         </div>
-                        <div class="col-xs-6">
+                        <div class="col-sm-6">
                           <div class="form-group required">
                             <label class="control-label" for="nume-delegat">Nume de familie:</label>
                             <input type="text" class="form-control" id="nume-delegat" name="nume" placeholder="Popescu" required>
@@ -565,13 +565,13 @@
                         <input type="text" class="form-control" id="cnp-delegat" name="cnp" placeholder="SAALLZZJJNNNC" required>
                       </div>
                       <div class="row">
-                        <div class="col-xs-4">
+                        <div class="col-sm-4">
                           <div class="form-group required">
                             <label class="control-label" for="serie-delegat">Serie act identitate:</label>
                             <input type="text" class="form-control" id="serie-delegat" name="serie" placeholder="XY" required>
                           </div>
                         </div>
-                        <div class="col-xs-8">
+                        <div class="col-sm-8">
                           <div class="form-group required">
                             <label class="control-label" for="numar-delegat">Număr act identitate:</label>
                             <input type="text" class="form-control" id="numar-delegat" name="numar" placeholder="123456" required>
@@ -583,7 +583,7 @@
                         <textarea class="form-control" id="adresa-delegat" name="adresa" rows="3" placeholder="Str. Carol Davila Nr. 91, Parter, Ap. 1, Sector 5, Bucureşti" required></textarea>
                       </div>
                       <div class="row">
-                        <div class="col-xs-6">
+                        <div class="col-sm-6">
                           <div class="form-group required">
                             <label class="control-label" for="regiune-delegat">Județul din actul de identitate:</label>
                             <select class="form-control" id="regiune-delegat" name="regiune" required>
@@ -639,7 +639,7 @@
                             </select>
                           </div>
                         </div>
-                        <div class="col-xs-6">
+                        <div class="col-sm-6">
                           <div class="form-group required">
                             <label class="control-label" for="tara-delegat">Țara:</label>
                             <select class="form-control" id="tara-delegat" name="tara" required>
