Updated forms and mail template

--- a/index.html
+++ b/index.html
@@ -514,9 +514,9 @@
                         <textarea class="form-control" id="observatii-reprezentant" name="observatii" rows="3" placeholder="De exemplu zona din localitate unde doresc repartizare" aria-describedby="help-observatii-reprezentant"></textarea>
                       </div>
                       <p class="help-block" id="help-observatii-reprezentant">Dacă doriţi să fiţi distribuiţi într-o localitate din alt judeţ, nu veţi putea vota.</p>
-                      <div class="checkbox required">
+                      <div class="checkbox">
                         <label class="control-label">
-                          <input type="checkbox" name="acord" required>
+                          <input type="checkbox" name="acord">
                           Sunt de acord să intru în baza de date a Uniunii Salvați România şi să primesc newslettere ocazional
                         </label>
                       </div>
@@ -925,9 +925,9 @@
                         <textarea class="form-control" id="observatii-delegat" name="observatii" rows="3" placeholder="De exemplu zona din localitate unde doresc repartizare" aria-describedby="help-observatii-delegat"></textarea>
                       </div>
                       <p class="help-block" id="help-observatii-delegat">Dacă doriţi să fiţi distribuiţi într-o localitate din alt judeţ, nu veţi putea vota.</p>
-                      <div class="checkbox required">
+                      <div class="checkbox">
                         <label class="control-label">
-                          <input type="checkbox" name="acord" required>
+                          <input type="checkbox" name="acord">
                           Sunt de acord să intru în baza de date a Uniunii Salvați România şi să primesc newslettere ocazional
                         </label>
                       </div>
