Updated help block

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                         <label class="control-label" for="observatii-reprezentant">Observații:</label>
                         <textarea class="form-control" id="observatii-reprezentant" name="observatii" rows="3" placeholder="De exemplu zona din localitate unde doresc repartizare" aria-describedby="help-observatii-reprezentant"></textarea>
                       </div>
-                      <p class="help-block" id="help-observatii-reprezentant">Dacă doriţi să fiţi distribuiţi într-o localitate din alt judeţ, nu veţi putea vota.</p>
+                      <p class="help-block" id="help-observatii-reprezentant">Dacă dorești să fii distribuit într-o localitate din alt judeţ nu vei putea vota.</p>
                       <div class="checkbox">
                         <label class="control-label">
                           <input type="checkbox" name="acord">
@@ -924,7 +924,7 @@
                         <label class="control-label" for="observatii-delegat">Observații:</label>
                         <textarea class="form-control" id="observatii-delegat" name="observatii" rows="3" placeholder="De exemplu zona din localitate unde doresc repartizare" aria-describedby="help-observatii-delegat"></textarea>
                       </div>
-                      <p class="help-block" id="help-observatii-delegat">Dacă doriţi să fiţi distribuiţi într-o localitate din alt judeţ, nu veţi putea vota.</p>
+                      <p class="help-block" id="help-observatii-delegat">Dacă dorești să fii distribuit într-o localitate din alt judeţ nu vei putea vota.</p>
                       <div class="checkbox">
                         <label class="control-label">
                           <input type="checkbox" name="acord">
