--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                       <input type="hidden" name="tip" value="reprezentant">
                       <p><strong>Reprezentantul</strong> are <em>obligaţia legală</em> de a participa la activitatea biroului electoral al secţiei de votare din care face parte (în conformitate cu dispoziţiile art. 98 din <a href="http://legislatie.just.ro/Public/DetaliiDocument/170037">Legea nr. 208/2015</a>). Trebuie să fie prezent în secţia de votare atât în:</p>
                       <ul class="list list-bulleted">
-                        <li><b>preziua alegerilor</b> (10 decembrie 2016) la ora 18:00, cât şi în</li>
-                        <li><b>ziua alegerilor</b> (11 decembrie 2016) de la ora 6:00 până la momentul întocmirii proceselor-verbale de constatare a rezultatelor votării şi a dosarelor cu rezultatele votării din secţia respectivă (aprox. ora 1-2 noaptea).</li>
+                        <li><strong>preziua alegerilor</strong> (10 decembrie 2016) la ora 18:00, cât şi în</li>
+                        <li><strong>ziua alegerilor</strong> (11 decembrie 2016) de la ora 6:00 până la momentul întocmirii proceselor-verbale de constatare a rezultatelor votării şi a dosarelor cu rezultatele votării din secţia respectivă (aprox. ora 1-2 noaptea).</li>
                       </ul>
-                      <p>Potrivit dispoziţiilor H.G. nr. 637/2016, va primi din partea statului o <b>indemnizaţie de 65 de lei</b> pentru fiecare zi de activitate, dar nu mai mult de 3 zile (prin zi de activitate se înţelege munca desfăşurată pe parcursul unei zile calendaristice, indiferent de numărul de ore prestate, dar nu mai puţin de 6 ore pe zi).</p>
+                      <p>Potrivit dispoziţiilor H.G. nr. 637/2016, va primi din partea statului o <strong>indemnizaţie de 65 de lei</strong> pentru fiecare zi de activitate, dar nu mai mult de 3 zile (prin zi de activitate se înţelege munca desfăşurată pe parcursul unei zile calendaristice, indiferent de numărul de ore prestate, dar nu mai puţin de 6 ore pe zi).</p>
                       <p><strong>Termen limită înscriere:</strong> <mark>23 noiembrie</mark></p>
                       <div class="checkbox">
                         <label class="control-label">
