Open link in new tab

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <div role="tabpanel" class="tab-pane fade in active" id="reprezentant">
                     <form class="form-reprezentant" method="post">
                       <input type="hidden" name="tip" value="reprezentant">
-                      <p><strong>Reprezentantul</strong> are <em>obligaţia legală</em> de a participa la activitatea biroului electoral al secţiei de votare din care face parte (în conformitate cu dispoziţiile art. 98 din <a href="http://legislatie.just.ro/Public/DetaliiDocument/170037">Legea nr. 208/2015</a>). Trebuie să fie prezent în secţia de votare atât în:</p>
+                      <p><strong>Reprezentantul</strong> are <em>obligaţia legală</em> de a participa la activitatea biroului electoral al secţiei de votare din care face parte (în conformitate cu dispoziţiile art. 98 din <a href="http://legislatie.just.ro/Public/DetaliiDocument/170037" target="_blank">Legea nr. 208/2015</a>). Trebuie să fie prezent în secţia de votare atât în:</p>
                       <ul class="list list-bulleted">
                         <li><strong>preziua alegerilor</strong> (10 decembrie 2016) la ora 18:00, cât şi în</li>
                         <li><strong>ziua alegerilor</strong> (11 decembrie 2016) de la ora 6:00 până la momentul întocmirii proceselor-verbale de constatare a rezultatelor votării şi a dosarelor cu rezultatele votării din secţia respectivă (aprox. ora 1-2 noaptea).</li>
