--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <div class="label">Secții de votare</div>
             </div>
           </div>
-          <div id="progres-inscrieri"></div>
+          <div id="progres-sectii"></div>
         </div>
       </div>
       <div class="row">
