--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                       </div>
                       <div class="form-group">
                         <label class="control-label" for="localitate-reprezentant">Localitatea unde doresc să activez, în judeţul din actul de identitate:</label>
-                        <input type="text" class="form-control" id="localitate-reprezentant" name="localitate" placeholder="" aria-describedby="help-localitate-reprezentant">
+                        <input type="text" class="form-control" id="localitate-reprezentant" name="localitate" placeholder="Sunt de acord să activez și în altă localitate din județ" aria-describedby="help-localitate-reprezentant">
                       </div>
                       <p class="help-block" id="help-localitate-reprezentant">Prin necompletare sunt de acord să activez și în altă localitate din județ.</p>
                       <div class="form-group required">
@@ -909,7 +909,7 @@
                       </div>
                       <div class="form-group">
                         <label class="control-label" for="localitate-delegat">Localitatea unde doresc să activez, în judeţul din actul de identitate:</label>
-                        <input type="text" class="form-control" id="localitate-delegat" name="localitate" placeholder="" aria-describedby="help-localitate-delegat">
+                        <input type="text" class="form-control" id="localitate-delegat" name="localitate" placeholder="Sunt de acord să activez și în altă localitate din județ" aria-describedby="help-localitate-delegat">
                       </div>
                       <p class="help-block" id="help-localitate-delegat">Prin necompletare sunt de acord să activez și în altă localitate din județ.</p>
                       <div class="form-group required">
